--- a/src/app/changelog/changelog.component.html
+++ b/src/app/changelog/changelog.component.html
@@ -23,9 +23,9 @@
         <br/>
 
 	      <h4>v4.0.1 22-04-2020 &nbsp; &nbsp; <span class="label label-default">Latest version</span></h4>
-	      <p>- Added departure time to incoming attacks in command overview and movement info panel (you can disable this in the settings).</p>
 	      <p>- Added parser for wisdom reports. You can now index wisdom reports from your inbox.</p>
 	      <p>- Added an intel shortcut to the context menu when you click on towns (you can disable this in the settings).</p>
+	      <p>- Added return and cancelable time to friendly movements (you can disable this in the settings).</p>
 	      <p>- Various bugfixes</p>
 	      <a href="https://github.com/GrepoDataTools/grepodata-backend/commit/adaa5b0cdbc32ae21786fef1a8d3738920385d62" target="_blank">
 		      <i class="fa fa-github" aria-hidden="true"></i> View changes on github.com
