--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -4,8 +4,7 @@
 		<br/>
 		<div class="row">
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-8">
-				Reports will receive an additional '<strong>Index +</strong>' button that will allow you to upload the report to your unique enemy city index.
-				<br/>
+				Reports will receive an additional '<strong>Index +</strong>' button that will allow you to upload the report to your unique index.
 				Click on this button to upload the report to the index.
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
@@ -16,13 +15,11 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-8">
 				Our service will then analyse the report to extract enemy intelligence and add it to your index.
-				You and your allies can then browse the collected intel on grepodata.com or in-game as can be seen in the figure on the right.
+				You and your allies can browse the collected intel on grepodata.com or in-game when they also have the userscript installed
+				(if you want to browse intel while in-game, you need to install the userscript for that index).
 				<br/>
 				<br/>
-				If you want to browse intel while in-game, you need to install the userscript for that index.
-				<br/>
-				<br/>
-				<strong>Note:</strong> You should install the userscript again for each new index you want to use. You can have multiple userscripts installed at the same time.
+				<strong>Note:</strong> You should install the userscript again for each new index you want to use; each index has its own unique generated userscript. You can have multiple userscripts installed at the same time.
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
 				<img class="lib-img" style="max-width: 100%; display: block;" src="../../assets/images/indexer_town.png" alt="Grepolis town intel">
@@ -40,8 +37,8 @@
 <div class="alert alert-gd-1">
 	<h2 class="gd-primary">Is it allowed?</h2>
 	<div class="faq-content">
-		<p>Our script does not automate any gameplay elements, and therefore is in compliance with the overall rules.</p>
-		<br/>Official approval is <strong>pending since 2018</strong>. Unfortunately, Grepolis is currently not evaluating new scripts due to limitations on available developers. However, using our script will not get you banned. <a href="https://en.forum.grepolis.com/index.php?threads/grepodata-enemy-city-indexer-pending-approval.62245/#post-1057206" target="_blank">You can find more info about this here.</a>
+		Our script does not automate any gameplay elements, and therefore is in compliance with the overall rules.
+		<br/>Official approval is <strong>pending since 2018</strong>. Unfortunately, Grepolis is currently not evaluating new scripts. However, using our script will not get you banned. <a href="https://en.forum.grepolis.com/index.php?threads/grepodata-enemy-city-indexer-pending-approval.62245/#post-1057206" target="_blank">You can find more info about this here.</a>
 	</div>
 </div>
 <div class="alert alert-gd-1">
@@ -89,13 +86,6 @@
 	<h2 class="gd-primary">Can I create multiple indexes?</h2>
 	<div class="faq-content">
 		You can create as many indexes as you wish. Please note that you should make a new index for each world you wish to play in.
-	</div>
-</div>
-<div class="alert alert-gd-1">
-	<h2 class="gd-primary">Can I upload reports automatically (background uploading)?</h2>
-	<div class="faq-content">
-		No. The automatic background upload has been removed from the script as it is against the rules of Grepolis.
-		Automated functionality is not allowed in userscripts. Using such a script will result in an in-game ban of your account when you are detected.
 	</div>
 </div>
 <div class="alert alert-gd-1">
