--- a/src/app/advertorial/advertorial.component.html
+++ b/src/app/advertorial/advertorial.component.html
@@ -1,3 +1,7 @@
+<div style="width: 100% !important; min-height: 285px; padding: 5px; text-align: center;" *ngIf="!mobile && !blocking">
+	<ad-unit></ad-unit>
+</div>
+
 <div class="blocked" *ngIf="!mobile && blocking">
   <div class="col-12 alert alert-warning text-center alert-gd-1" style="width: 100%;">
     <div class="row">
@@ -13,8 +17,4 @@
       </div>
     </div>
   </div>
-</div>
-
-<div style="width: 100% !important; padding: 5px; text-align: center;" *ngIf="!mobile && !blocking">
-	<ad-unit></ad-unit>
 </div>
