--- a/src/app/indexer/town/town.component.html
+++ b/src/app/indexer/town/town.component.html
@@ -111,6 +111,7 @@
 									              <div *ngIf="town.type === 'enemy_attack'" style="-moz-transform: scaleX(-1); -o-transform: scaleX(-1); -webkit-transform: scaleX(-1); transform: scaleX(-1); filter: FlipH; -ms-filter: ;">
 										              <img src="../../assets/images/game/towninfo/attack.png">
 									              </div>
+									              <img src="../../assets/images/game/towninfo/wisdom.png" *ngIf="town.type === 'wisdom'">
 									              <img src="../../assets/images/game/towninfo/support.png" *ngIf="town.type === 'support'">
 									              <img src="../../assets/images/game/towninfo/conquer.png" *ngIf="town.type === 'attack_on_conquest'">
 									              <img src="../../assets/images/game/towninfo/espionage_2.67.png" *ngIf="town.type === 'spy'">
